# microcode

./: .gitignore  CHECKSUMS.sha256  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  Package.swift  QUICKSTART.md  README.md  ReadMe.txt  SHA256SUMS.txt  SIGNING_GUIDE.md  Secrets.plist.example  Welcome.rtf  build.sh  build_dev.sh  build_distribution.sh  build_extensions.sh  bundle_runtimes.sh  clean_project.sh  codetunnerxround.icns  distribution.xml  fix_previews.py  generate_checksums.sh  info.md  install-mcp-gui.py  install-mcp.sh  mcp-config-claude.json  mcp-server.py  rename_codetunner.py  rename_project.py  rename_rust.py  sign_and_notarize.sh  strip_previews.py  test_compression.swift  test_theme  test_theme.swift  verify_checksums.sh
.github/workflows/: build-mac.yml  ci.yml  pr-check.yml  release.yml  security-verify.yml
.microcode/cells/: cell_eval.json  cell_imports.json  cell_preprocess.json  cell_train.json
CodeTunner/: CodeTunnerApp.swift
CodeTunner/Extensions/: ColorExtensions.swift  NSColor+Hex.swift  URLExtensions.swift
CodeTunner/Helpers/: GraphemeHelper.swift
CodeTunner/Kernel/: ComputeKernel.swift  ExtensionSandbox.swift  JupyterClient.swift  JupyterKernel.swift  KernelClient.swift  ThemeEngine.swift  WebEngine.swift
CodeTunner/Managers/: ReportLogManager.swift
CodeTunner/Models/: AICodeReport.swift  AnyCodable.swift  AppState.swift  CellModels.swift  DesignModels.swift  MLModels.swift  MicFormat.swift  ScenarioModels.swift  TaskModels.swift
CodeTunner/Services/: AIAutocompleteService.swift  AIClient.swift  AIProviderAuthService.swift  APIClientService.swift  AgentService.swift  ArdiumLSPService.swift  AuthService.swift  AutoHealerService.swift  BackendService.swift  BillingService.swift  CICDService.swift  CloudKeyManager.swift  CodeAnalyzer.swift  CollaborationService.swift  ContainerService.swift  DataFrameService.swift  DatabaseService.swift  DesignStore.swift  DotnetService.swift  ExportService.swift  ExtensionManager.swift  HotReloadClient.swift  KeychainManager.swift  LSPClientService.swift  LSPManager.swift  LocalLLMService.swift  LocalPipelineRunner.swift  MCPServer.swift  MLTrainer.swift  MicroCodeService.swift  PerformanceManager.swift  PreviewService.swift  ProjectManager.swift  PythonEnvManager.swift  RemoteWorkspaceManager.swift  RuntimeManager.swift  SSHConfigParser.swift  SharedMemoryService.swift  SimulatorManager.swift  TaskManager.swift  (+2 more)
CodeTunner/SyntaxEngine/: AuthenticLexerAdapter.swift  Lexer.swift  SyntaxCache.swift  SyntaxHighlightingEngine.swift  ThemeManager.swift  Token.swift
CodeTunner/Views/: APIClientView.swift  AuthView.swift  CICDPipelineView.swift  CatalogueSidebar.swift  CodeAnalysisPanel.swift  CodeAnalysisWindow.swift  CollaborationView.swift  ContainerView.swift  ContentView.swift  DataFrameView.swift  DatabaseStudioView.swift  DocumentViewer.swift  DotnetProjectView.swift  DotnetToolbar.swift  EditorView.swift  EmbeddedProjectWizard.swift  (+35 more)
CodeTunnerKernel/: MicroKernel.mm
CodeTunnerSupport/: AuthenticAIContext.mm  AuthenticFileTreeController.mm  AuthenticLanguageCore.mm  AuthenticSyntaxEngine.mm  ExceptionCatcher.m
GUI/: README.md
Linux/: Package.swift  README.md
MicroCode/: MicroCodeApp.swift
MicroCodeKernel/: FrameworkLoader.mm  MicroKernel.mm
MicroCodeSupport/: AuthenticLanguageCore.mm  AuthenticLineNumberRuler.mm  AuthenticPreview.mm  AuthenticSyntaxEngine.mm  USBDetector.mm
PreviewAgent/: Package.swift
Windows/: Package.swift  README.md
backend/: .env.example  Cargo.toml  build.rs
backend/idx-engine/: Cargo.toml
backend/idx-engine/src/: main.rs
backend/idx-engine/src/bridge/: mod.rs
backend/idx-engine/src/bridge/node/: ipc.rs  process.rs
backend/idx-engine/src/bridge/wasm/: runtime.rs
backend/idx-engine/src/core/: buffer.rs  mod.rs  state.rs
backend/idx-engine/src/services/: extension_manager.rs  filesystem.rs  mod.rs
backend/proto/: preview_protocol.proto
backend/src/: agent.rs  ai.rs  ai_report.rs  ai_ultra.rs  cicd.rs  code.rs  crash_decoder.rs  database.rs  device_manager.rs  dotnet.rs  error.rs  ftp.rs  git.rs  indexer.rs  lib.rs  main.rs  microcode_core.rs  ml.rs  models.rs  network.rs  nodejs.rs  project.rs  rag.rs  remote.rs  rosetta.rs  runner.rs  scenario.rs  state.rs  tasks.rs
backend/src/ai_engine/: fast_tier.rs  handlers.rs  handlers_draft.rs  mod.rs  smart_tier.rs
backend/src/code/: analyzer.rs  file_ops.rs  formatter.rs  highlighter.rs
backend/src/data/: dataframe.rs
backend/src/hot_reload/: agent.rs  ipc.rs  mod.rs  state.rs  swizzle.rs  thunk.rs
backend/src/kernel/: fs.rs  mod.rs  net.rs  power.rs  safety.rs
backend/src/live_preview/: host.rs  ipc.rs  mod.rs
backend/src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs
backend/src/mcp/: mcp_client.rs  mod.rs
backend/src/preview_v2/: builder.rs  mod.rs
backend/src/terminal/: manager.rs  mod.rs
extension-host/: Cargo.toml
extension-host/src/: ipc.rs  main.rs  wasm.rs
microcode-ext/: Cargo.toml
microcode_core/: Cargo.toml
microcode_core/src/: fs_editor.rs  lib.rs  llm_client.rs  rag_engine.rs
vscode-compat-host/: package-lock.json  package.json  tsconfig.json
(+232 files in other folders)
