[workspace]
members = [
    ".",
    "idx-engine"
]

[package]
name = "codetunner-backend"
version = "2.0.0"
edition = "2021"
authors = ["SPU AI CLUB"]

[features]
default = ["shm"]
shm = []

[dependencies]
libc = "0.2"
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"], default-features = false }

# Async utilities
futures-util = "0.3"
futures = "0.3"
eventsource-stream = "0.2"
async-recursion = "1.0"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
once_cell = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "mysql", "macros"] }
lazy_static = "1.4"

# Environment variables
dotenv = "0.15"

# Git operations
# Git operations
git2 = { version = "0.18", features = ["vendored-openssl"] }

# File system operations
notify = "6.1"
walkdir = "2.4"

# Process execution
subprocess = "0.2"

# Syntax highlighting
syntect = "5.1"


# AI API clients
async-openai = "0.17"
async-trait = "0.1"

# Remote X (SSH, SFTP, FTP)
russh = "0.40"
russh-keys = "0.40"
russh-sftp = "2.0" 
suppaftp = { version = "5.4.0", default-features = false, features = ["async-native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
openssl = { version = "0.10", features = ["vendored"] }

# System
which = "6.0"
dirs = "5.0"

# Code analysis
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"

# Configuration
config = "0.13"

# Regular expressions
regex = "1.10"

# Base64 encoding
base64 = "0.21"

# gRPC support
tonic = "0.11"
prost = "0.12"

# Hybrid AI Engine
candle-core = { version = "0.5.0", features = ["accelerate"] } 
candle-transformers = "0.5.0"
candle-nn = "0.5.0"
tokenizers = "0.19"
# lancedb = "0.4.5"
# arrow-array = "49.0" 
hf-hub = { version = "0.3.2", features = ["tokio"] }
genpdf = "0.2"
tokio-stream = { version = "0.1.17", features = ["sync"] }

# DataFrame
polars = { version = "0.36", features = ["lazy", "ipc", "csv", "parquet", "json", "serde"] }

# Terminal PTY
portable-pty = "0.9"
nix = "0.26"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "codetunner-backend"
path = "src/main.rs"

[[bin]]
name = "preview-agent"
path = "src/bin/preview_agent.rs"
