[package]
name = "extension-host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "18.0.0"
wasmtime-wasi = "18.0.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
