[package]
name = "idx-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization & RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Assembly Runtime
wasmtime = "16.0"
wasi-common = "16.0"

# Text Buffer
ropey = "1.6" # Immutable text rope for efficient editing

# Network (Open VSX)
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3" # For streaming downloads

# Utilities
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6" # For .vsix extraction
dirs = "5.0" # Extension install paths
tracing = "0.1" # Logging
